--- a/src/site.scss
+++ b/src/site.scss
@@ -2,3 +2,9 @@
 a.w-webflow.badge {
     display: none; 
 }
+
+// img.clinic-featured-slide-index {
+//     opacity: 0; /* Start with the image fully transparent */
+//     transition: opacity 1s ease-in-out; /* Smooth transition for the opacity */
+// }
+
